--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>Brick Breaker Game V1.1</title>
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
